--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" ,
-    "start" : "node src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "hackathon_arch",
   "license": "ISC",
   "type": "module",
   "dependencies": {
@@ -18,5 +18,9 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "ERP_Project"
   }
 }
