--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,13 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "pdfkit": "^0.17.2"
   },
   "repository": {
